# SavVio

./: .dockerignore.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyrightconfig.json  rough_architecture.md
.dvc/: config
config/schemas/: financial_schema.json  product_schema.json  review_schema.json
data-pipeline/: .gitignore  Dockerfile  README.md  SETUP_AND_RUN.md  convert_json_to_csv.py  data-requirements.txt  debug_import.py  docker-compose.yaml  implementation_plan.md  pytest.ini  replace_logs.py  test_logs.py
data-pipeline/dags/: data_pipeline_airflow.py
data-pipeline/data/: .gitignore  processed.dvc  raw.dvc
data-pipeline/database-scripts/: db-schemas.py  upload-to-db.py  vector-embed.py  vector-embedings.py
data-pipeline/features-scripts/: run_features.py
data-pipeline/ingestion-scripts/: config.py  run_ingestion.py  upload_data.py
data-pipeline/scripts/: check_preprocessing.py  run_preprocessing.py
data_pipeline/: .env.example  Dockerfile  README.md  SETUP_AND_RUN.md  data-requirements.txt  docker-compose.yaml  pyproject.toml
model-development/: Dockerfile  README.md  SETUP_RUN.md  affordability_features.py  bias_detection.py  docker-compose.yml  implementation_plan.md  model-requirements.txt
model_pipeline/: .env.model.example  Dockerfile  README.md  SETUP_RUN.md  docker-compose.yml  implementation_plan.md  model-requirements.txt  pyproject.toml
savviocore/: pyproject.toml
savviocore/src/savviocore/database/: db_connection.py  db_schema.py
savviocore/src/savviocore/validation/: feature_validator.py
(+204 files in other folders)
